--- a/app/src/main/res/layout/details_layout.xml
+++ b/app/src/main/res/layout/details_layout.xml
@@ -1,44 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#3498db"
+    android:layout_height="match_parent"
+    android:background="@color/mBlue"
     android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_height="match_parent">
+    android:layout_marginRight="5dp" >
 
 
     <ImageView
         android:id="@+id/ic_song"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft = "5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:layout_alignParentTop="true"
-        android:src="@android:drawable/btn_star_big_on" />
+        android:src="@drawable/ic_song" />
 
     <TextView
         android:id="@+id/song_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/ic_song"
+        android:layout_toRightOf="@id/ic_song"
+        android:layout_toEndOf="@id/ic_song"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
-        android:text="Nazwa piosenki"
+        android:layout_marginStart="5dp"
+        android:text="@string/song_name"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000"
         android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/artistInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/ic_song"
+        android:layout_toEndOf="@id/ic_song"
+        android:layout_below="@id/song_name"
+        android:layout_marginTop="1dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
+        android:text="@string/artist"
+        android:textColor="@color/mBlack"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="14sp" />
+
+    <TextView
         android:id="@+id/artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/ic_song"
-        android:layout_below="@+id/song_name"
-        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/artistInfo"
+        android:layout_toEndOf="@id/artistInfo"
+        android:layout_below="@id/song_name"
+        android:layout_marginTop="1dp"
         android:layout_marginLeft="5dp"
-        android:text="Wykonawca:"
-        android:textColor="#000000"
+        android:layout_marginStart="5dp"
+        android:text="@string/artist"
+        android:textColor="@color/mBlack"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/yearInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/artistInfo"
+        android:layout_alignStart="@id/artistInfo"
+        android:layout_below="@id/artistInfo"
+        android:text="@string/release_year"
+        android:textColor="@color/mBlack"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="14sp" />
 
@@ -46,12 +79,13 @@
         android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/artist"
-        android:layout_below="@+id/song_name"
-        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/yearInfo"
+        android:layout_toEndOf="@id/yearInfo"
         android:layout_marginLeft="5dp"
-        android:text="Rok:"
-        android:textColor="#000000"
+        android:layout_marginStart="5dp"
+        android:layout_below="@id/artist"
+        android:text="@string/release_year"
+        android:textColor="@color/mBlack"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="14sp" />
 
