--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#3498db"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context="patryk.songapp.SearchActivity">
 
     <EditText
@@ -12,13 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/editext_style"
+        android:hint="@string/search_hint"
+        android:inputType="text"
+        android:paddingEnd="5dp"
+        android:paddingLeft="5dp"
+        android:paddingStart="5dp"
+        android:textColor="@color/colorPrimaryDark" />
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
         android:layout_below="@+id/searchText" />
-    
+
+    <TextView
+        android:id="@+id/empty_list"
+        style="@android:style/TextAppearance.Large"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/searchText"
+        android:layout_centerInParent="true"
+        android:background="@color/edttxt_background"
+        android:drawablePadding="10dp"
+        android:drawableTop="@mipmap/ic_empty"
+        android:gravity="center_horizontal"
+        android:paddingTop="150dp"
+        android:text="@string/empty_list"
+        android:textColor="@color/test3bright"
+        android:textStyle="normal" />
+
 
 </RelativeLayout>
