--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/editext_style"
+        android:fontFamily="sans-serif-light"
         android:hint="@string/search_hint"
         android:inputType="text"
         android:paddingEnd="5dp"
@@ -44,6 +45,7 @@
         android:background="@color/edttxt_background"
         android:drawablePadding="10dp"
         android:drawableTop="@mipmap/ic_empty"
+        android:fontFamily="sans-serif-light"
         android:gravity="center_horizontal"
         android:paddingTop="150dp"
         android:text="@string/empty_list"
