--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="#3498db"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#3498db"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/welcome_msg"
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:fontFamily="sans-serif"
-        android:text="Welcome!"
+        android:layout_centerInParent="true"
+        android:fontFamily="sans-serif-thin"
+        android:paddingTop="100dp"
+        android:text="@string/welcome_msg"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="25sp" />
+
+    <ImageButton
+        android:id="@+id/nav_left"
+        android:layout_width="50dp"
+        android:layout_height="300dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
+        android:background="@null"
+        android:contentDescription="@string/remote"
+        android:src="@mipmap/ic_left" />
+
+    <ImageButton
+        android:id="@+id/nav_right"
+        android:layout_width="50dp"
+        android:layout_height="300dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:background="@null"
+        android:contentDescription="@string/local"
+        android:src="@mipmap/ic_next" />
+
 </RelativeLayout>
