--- a/app/src/main/res/layout/remotedata_layout.xml
+++ b/app/src/main/res/layout/remotedata_layout.xml
@@ -4,17 +4,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="patryk.songapp.SearchActivity">
+    tools:context="patryk.songapp.RemoteDataActivity">
 
     <EditText
-        android:id="@+id/searchText"
+        android:id="@+id/searchTitle"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/editext_style"
         android:fontFamily="sans-serif-light"
-        android:hint="@string/search_hint"
+        android:hint="@string/titleFilter"
+        android:inputType="text"
+        android:paddingEnd="5dp"
+        android:paddingLeft="5dp"
+        android:paddingStart="5dp"
+        android:textColor="@color/colorPrimaryDark" />
+
+    <EditText
+        android:id="@+id/searchArtist"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/searchTitle"
+        android:background="@drawable/editext_style"
+        android:fontFamily="sans-serif-light"
+        android:hint="@string/artistFilter"
+        android:inputType="text"
+        android:paddingEnd="5dp"
+        android:paddingLeft="5dp"
+        android:paddingStart="5dp"
+        android:textColor="@color/colorPrimaryDark" />
+
+    <EditText
+        android:id="@+id/searchYear"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/searchArtist"
+        android:background="@drawable/editext_style"
+        android:fontFamily="sans-serif-light"
+        android:hint="@string/yearFilter"
         android:inputType="text"
         android:paddingEnd="5dp"
         android:paddingLeft="5dp"
@@ -22,25 +50,25 @@
         android:textColor="@color/colorPrimaryDark" />
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipeRefresh"
+        android:id="@+id/sR"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/searchText">
+        android:layout_below="@id/searchYear">
 
         <ListView
-            android:id="@+id/listView"
+            android:id="@+id/dataList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/searchText" />
+            android:layout_below="@id/searchYear" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
-        android:id="@+id/empty_list"
+        android:id="@+id/empty_list2"
         style="@android:style/TextAppearance.Large"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/searchText"
+        android:layout_below="@id/searchYear"
         android:layout_centerInParent="true"
         android:background="@color/edttxt_background"
         android:drawablePadding="10dp"
@@ -48,7 +76,7 @@
         android:fontFamily="sans-serif-light"
         android:gravity="center_horizontal"
         android:paddingTop="150dp"
-        android:text="@string/empty_list"
+        android:text="@string/empty_msg"
         android:textColor="@color/test3bright"
         android:textStyle="normal"
         android:visibility="gone" />
