--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:fontFamily="sans-serif-thin"
-        android:paddingTop="100dp"
+        android:paddingTop="120dp"
         android:text="@string/welcome_msg"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -21,7 +21,7 @@
     <ImageButton
         android:id="@+id/nav_left"
         android:layout_width="50dp"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
@@ -32,7 +32,7 @@
     <ImageButton
         android:id="@+id/nav_right"
         android:layout_width="50dp"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
