--- a/app/src/main/res/layout/remotedata_layout.xml
+++ b/app/src/main/res/layout/remotedata_layout.xml
@@ -14,12 +14,13 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/editext_style"
         android:fontFamily="sans-serif-light"
-        android:hint="@string/search_hint"
+        android:hint="@string/search_itunes_hint"
         android:inputType="text"
         android:paddingEnd="5dp"
         android:paddingLeft="5dp"
         android:paddingStart="5dp"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textColor="@color/colorPrimaryDark"
+        android:imeOptions="actionDone" />
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/sR"
@@ -54,6 +55,5 @@
         android:textColor="@color/test3bright"
         android:textStyle="normal"
         android:visibility="gone" />
-
 
 </RelativeLayout>
