New layout for iTunes results with details and enhanced design

--- a/app/src/main/res/layout/localdata_layout.xml
+++ b/app/src/main/res/layout/localdata_layout.xml
@@ -10,14 +10,13 @@
         android:id="@+id/searchText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@drawable/editext_style"
+        android:background="@drawable/gradient_second"
         android:fontFamily="sans-serif-light"
         android:hint="@string/search_hint"
+        android:imeOptions="actionDone"
         android:inputType="text"
         android:paddingEnd="5dp"
-        android:paddingLeft="5dp"
         android:paddingStart="5dp"
         android:textColor="@color/colorPrimaryDark" />
 
@@ -42,7 +41,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/searchText"
         android:layout_centerInParent="true"
-        android:background="@color/edttxt_background"
+        android:background="@drawable/gradient"
         android:drawablePadding="10dp"
         android:drawableTop="@mipmap/ic_empty"
         android:fontFamily="sans-serif-light"
