--- a/app/src/main/res/layout/remotedata_layout.xml
+++ b/app/src/main/res/layout/remotedata_layout.xml
@@ -10,17 +10,15 @@
         android:id="@+id/searchWindow"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@drawable/editext_style"
+        android:background="@drawable/gradient_second"
         android:fontFamily="sans-serif-light"
         android:hint="@string/search_itunes_hint"
+        android:imeOptions="actionDone"
         android:inputType="text"
         android:paddingEnd="5dp"
-        android:paddingLeft="5dp"
         android:paddingStart="5dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:imeOptions="actionDone" />
+        android:textColor="@color/colorPrimaryDark" />
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/sR"
@@ -43,14 +41,14 @@
         android:layout_height="match_parent"
         android:layout_below="@id/searchWindow"
         android:layout_centerInParent="true"
-        android:background="@color/edttxt_background"
+        android:background="@drawable/gradient"
         android:drawablePadding="10dp"
         android:drawableTop="@mipmap/ic_empty"
         android:fontFamily="sans-serif-light"
         android:gravity="center_horizontal"
-        android:paddingTop="150dp"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
+        android:paddingTop="150dp"
         android:text="@string/empty_msg"
         android:textColor="@color/test3bright"
         android:textStyle="normal"
