--- a/app/src/main/res/layout/item_details_layout.xml
+++ b/app/src/main/res/layout/item_details_layout.xml
@@ -4,17 +4,15 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:background="@color/mBlue">
+    android:background="@drawable/gradient">
 
 
     <ImageView
         android:id="@+id/ic_song"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:src="@drawable/ic_song" />
@@ -23,15 +21,12 @@
         android:id="@+id/song_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_toEndOf="@id/ic_song"
-        android:layout_toRightOf="@id/ic_song"
         android:fontFamily="sans-serif"
         android:text="@string/song_name"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#000000"
         android:textSize="18sp" />
 
     <TextView
@@ -39,15 +34,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/song_name"
-        android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="1dp"
         android:layout_toEndOf="@id/ic_song"
-        android:layout_toRightOf="@id/ic_song"
         android:fontFamily="sans-serif-light"
         android:text="@string/artist"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/mBlack"
         android:textSize="14sp" />
 
     <TextView
@@ -55,28 +47,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/song_name"
-        android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="1dp"
         android:layout_toEndOf="@id/artistInfo"
-        android:layout_toRightOf="@id/artistInfo"
         android:fontFamily="sans-serif-thin"
         android:text="@string/artist"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/mBlack"
         android:textSize="14sp" />
 
     <TextView
         android:id="@+id/yearInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/artistInfo"
         android:layout_alignStart="@id/artistInfo"
         android:layout_below="@id/artist"
         android:fontFamily="sans-serif-light"
         android:text="@string/release_year"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/mBlack"
         android:textSize="14sp" />
 
     <TextView
@@ -84,10 +71,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/artist"
-        android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@id/yearInfo"
-        android:layout_toRightOf="@id/yearInfo"
         android:fontFamily="sans-serif-thin"
         android:text="@string/release_year"
         android:textAppearance="?android:attr/textAppearanceMedium"
